News UAT/force-app/main/default/objects/Alert__c/Alert__c.object-meta.xml
<CustomObject>
    <label>Alert</label>
    <nameField>
        <displayFormat>ART{00000000}</displayFormat>
        <label>Alert ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Alerts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>