News UAT/force-app/main/default/objects/Alert__c/fields/Note__c.field-meta.xml
<CustomField>
    <fullName>Note__c</fullName>
    <defaultValue>&quot;• If the Alert applies to a single Contact of an Account, fill in the Account and Contact name.&quot; &amp; BR() &amp;
&quot;•  If the Alert applies to the entire Account (any contacts), only include Account name and leave Contact field blank.&quot;  &amp; BR() &amp;
&quot;• If the Alert is for a Private Party Account, only include Account name and leave Contact field blank.&quot;</defaultValue>
    <label>.</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>