News UAT/force-app/main/default/objects/Alert__c/fields/Trigger_Account_Only__c.field-meta.xml
<CustomField>
    <fullName>Trigger_Account_Only__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Do not show on page: This checkbox is used to flag that alert is ONLY associated to an account and does not have a contact. This flag allows rollup summaries to use as a filter and hence, create further triggers off rollup summary field. ;)</inlineHelpText>
    <label>Trigger: Account Only</label>
    <type>Checkbox</type>
</CustomField>